--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,4 +1,5 @@
-/* Import all the modules */
+/* Import all the partials */
+@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@300;700;900&display=swap");
 * {
   padding: 0;
   margin: 0; }
@@ -9,7 +10,7 @@ html {
 *, *:before, *:after {
   box-sizing: inherit; }
 
-.colors {
-  font-family: Arial, Helvetica, sans-serif;
-  color: red;
-  background-color: black; }
+body {
+  font-family: "Mulish", Arial, Helvetica, sans-serif;
+  color: #222222;
+  background-color: #f2f2f2; }
