--- a/src/assets/sass/_layout.scss
+++ b/src/assets/sass/_layout.scss
@@ -1,8 +1,22 @@
 .container {
    width: 100%;
-   margin: 0 auto;
 }
 
 .wrap {
    padding: 0 5%;
+   margin: 0 auto;
+}
+
+@media only screen and (min-width: 800px) {
+   .wrap {
+      padding: 0;
+      width: 700px;
+   }
+}
+
+
+@media only screen and (min-width: 1920px) {
+   .wrap {
+      width: 960px;
+   }
 }
