--- a/src/assets/sass/_typography.scss
+++ b/src/assets/sass/_typography.scss
@@ -9,6 +9,8 @@ body {
 h1 {
    font-weight: 900;
    font-size: 2em;
+   color: #fff;
+   text-shadow: 0px 2px 1px black;
 }
 
 h2 {
@@ -19,7 +21,7 @@ h2 {
 
 h3 {
    font-weight: 700;
-   color: #E09873;
+   color: #bd3383;
 }
 
 p {
@@ -68,6 +70,7 @@ img {
 }
 
 .page-content a {
+   color: #bd3383;
    border-bottom: 1px dotted lighten($body-copy, 50);
    &:hover {
       border-bottom: 1px solid $body-copy;
